--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,17 +1,98 @@
-footer {
-    position: fixed;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    background-color: #d9d9d9;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
 }
 
-.footerButton {
-    margin-left: 75px;
-    margin-right: 0px;
+/* .container {
+} */
+
+#go-back {
+    position: absolute;
+    left: 20px;
+    top: 50px;
+    background-color: gray;
+    opacity: 0.4;
+    border-radius: 20px;
+    width: 50px;
+    height: 50px;
+}
+.header {
+    background-color: #FF8624;
+    color: #fff;
+    padding: 30px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    height : 100px;
+    box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961);
+    /* height: 130px; *--> AI page */
+}
+
+.profile-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    border-radius: 15px;
+}
+
+.username {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.section {
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+.section-title {
+    font-size: 18px;
     margin-bottom: 10px;
-    margin-top: 10px;
-    padding: 0;
-    border: none;
+    color: #888;
+}
+
+.item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.item .icon {
+    margin-right: 10px;
+    color: #888;
+}
+
+.item .toggle {
+    margin-left: auto;
+}
+
+.danger-zone .item {
+    background-color: #ffebee;
+    color: #d32f2f;
+}
+
+.footer {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 12px;
+    color: #aaa;
+}
+
+.footer a {
+    color: #aaa;
     text-decoration: none;
 }
