--- a/styles/profile.css
+++ b/styles/profile.css
@@ -4,34 +4,44 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
 }
 
 /* .container {
 } */
 
-#go-back {
-    position: absolute;
-    left: 20px;
-    top: 50px;
-    background-color: gray;
-    opacity: 0.4;
-    border-radius: 20px;
-    width: 50px;
-    height: 50px;
-}
+
 .header {
+    position: relative;
     background-color: #FF8624;
     color: #fff;
-    padding: 30px;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
+    padding: 20px;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     height : 100px;
-    box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961);
     /* height: 130px; *--> AI page */
+    box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961);
+}
+
+.headerTitle {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+#go-back {
+    position: absolute;
+    background-color:#f5f5f5;
+    color:#FF8624;
+    opacity: 0.4;
+    border-radius: 20px;
+    font-size: 20px;
+    border: none; 
+}
+
+.go-back:hover {
+    color: #ffcc00; 
+    cursor: pointer;
 }
 
 .profile-image {
@@ -49,6 +59,20 @@ body {
     justify-content: center;
 }
 
+.alert-success {
+    position: fixed;
+    top: 20px; 
+    right: 20px; 
+    background-color:#f5f5f5;
+    color:#FF8624;
+    padding: 15px;
+    border: 1px solid #ffcc00;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961); 
+    font-size: 16px; 
+    font-weight: bold; 
+}
+
 .section {
     margin-top: 20px;
     margin-left: 10px;
@@ -60,6 +84,11 @@ body {
     color: #888;
 }
 
+a {
+    /* Inherit color from parent element */
+    color: inherit;
+}
+
 .item {
     display: flex;
     justify-content: space-between;
@@ -69,15 +98,12 @@ body {
     margin-bottom: 10px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-emphasis: none;
 }
 
 .item .icon {
     margin-right: 10px;
     color: #888;
-}
-
-.item .toggle {
-    margin-left: auto;
 }
 
 .danger-zone .item {
@@ -90,9 +116,4 @@ body {
     margin-top: 20px;
     font-size: 12px;
     color: #aaa;
-}
-
-.footer a {
-    color: #aaa;
-    text-decoration: none;
 }
