removed 'share' button form main page

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -52,9 +52,9 @@
     <div id="main">
       <div id="header">
         <h1>Ranking</h1>
-        <button class="share">
+        <!-- <button class="share">
           <i class="ph ph-share-network"></i>
-        </button>
+        </button> -->
       </div>
       <div id="leaderboard">
         <div class="ribbon "></div>
