commented out unavailable pages

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -90,7 +90,7 @@
             </div>
         </div>
 
-        <div class="section">
+        <!-- <div class="section">
             <div class="section-title">Security & Privacy</div>
             <div class="item">
                 <a href="/" style="text-decoration : none;">
@@ -115,7 +115,7 @@
                     <span>Help Center</span>
                 </a>
             </div>
-        </div>
+        </div> -->
 
 
         <div class="section danger-zone">
