added email to profile page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,6 +17,11 @@
                     <%= username %>
                 </h1>
             </div>
+            <div class="d-flex justify-content-center">
+                <h1>
+                    <%= email %>
+                </h1>
+            </div>
         </div>
 
 
