Added rankProgress page.

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -88,7 +88,7 @@
                     </div>
 
                     <div class="item">
-                        <a href="/" style="text-decoration : none;">
+                        <a href="/rankProgress" style="text-decoration : none;">
                             <span class="icon">🏆</span>
                             <span>Ranking Progress</span>
                         </a>
