--- a/views/postImgtest.ejs
+++ b/views/postImgtest.ejs
@@ -6,10 +6,19 @@
     <title>Community</title>
 </head>
 <body>
+
+    <a href="main">
+        <input type="image" class="footerButton" src="../../img/35-home-general.svg">
+    </a>
+
+
     <h1>Community Posts</h1>
     
     <form action="/postImgtest/post" method="post" enctype="multipart/form-data">
         <textarea name="text" rows="4" cols="50" placeholder="Write something..." required></textarea><br>
+        <input type="file" name="images" accept="image/*" multiple><br>
+        <input type="file" name="images" accept="image/*" multiple><br>
+        <input type="file" name="images" accept="image/*" multiple><br>
         <input type="file" name="images" accept="image/*" multiple><br>
         <button type="submit">Post</button>
     </form>
@@ -17,12 +26,10 @@
     <% posts.forEach(post => { %>
         <div style="border: 1px solid #000; padding: 10px; margin: 10px;">
             <p><%= post.text %></p>
-            <% if (post.imageUrls && post.imageUrls.length > 0) { %>
-                <% post.imageUrls.forEach(image => { %>
-                    <img src="<%= image %>" alt="Post Image" style="max-width: 100px; max-height: 100px;">
-                <% }) %>
-            <% } %>
-            <form action="/postImgtest/delete/<%= post._id %>" method="post">
+            <% post.imageUrls.forEach(image => { %>
+                <img src="<%= image %>" alt="Post Image" style="max-width: 100px; max-height: 100px;">
+            <% }) %>
+            <form action="/postImgtest/delete/<%= post._id %>" method="post" style="margin-top: 10px;">
                 <button type="submit">Delete</button>
             </form>
         </div>
