--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -21,9 +21,11 @@
                 </div>
                 <span>
                     <form method="post" action="/addPointDiet" style="display: inline">
+                        <input type="text" name="task" value="<%= task1 %>" hidden>
                         <button class="btn btn-secondary float-right" type="submit">Done</button>
                     </form>
-                    <form method="post" action="/rerollDiet1" style="display: inline">
+                    <form method="post" action="/rerollDiet" style="display: inline">
+                        <input type="text" name="number" value="1" hidden>
                         <button class="btn btn-secondary float-right" type="submit">Reroll</button>
                     </form>
                 </span>
@@ -34,9 +36,11 @@
                 </div>
                 <span>
                     <form method="post" action="/addPointDiet" style="display: inline">
+                        <input type="text" name="task" value="<%= task2 %>" hidden>
                         <button class="btn btn-secondary float-right" type="submit">Done</button>
                     </form>
-                    <form method="post" action="/rerollDiet2" style="display: inline">
+                    <form method="post" action="/rerollDiet" style="display: inline">
+                        <input type="text" name="number" value="2" hidden>
                         <button class="btn btn-secondary float-right" type="submit">Reroll</button>
                     </form>
                 </span>
@@ -47,9 +51,11 @@
                 </div>
                 <span>
                     <form method="post" action="/addPointDiet" style="display: inline">
+                        <input type="text" name="task" value="<%= task3 %>" hidden>
                         <button class="btn btn-secondary float-right" type="submit">Done</button>
                     </form>
-                    <form method="post" action="/rerollDiet3" style="display: inline">
+                    <form method="post" action="/rerollDiet" style="display: inline">
+                        <input type="text" name="number" value="3" hidden>
                         <button class="btn btn-secondary float-right" type="submit">Reroll</button>
                     </form>
                 </span>
