--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -4,6 +4,13 @@
     </head>
 
     <body>
+
+        <div class="rerolls">
+            <img class="rerollImg" src="/img/reroll.png" alt="logo">
+            <span class="reroll">: <%=rerolls%>
+            </span>
+        </div>
+
         <!-- Chatbot -->
         <form id="Chatter">
             <input type="text" id="question" name="chatbot" placeholder="Ask Me Anything!">
