--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -5,13 +5,14 @@
 
     <body>
         <!-- Chatbot -->
-        <form id="Chatter">
-            <input type="text" id="question" name="chatbot" placeholder="Ask Me Anything!">
-            <button type="submit">Send</button>
-        </form>
+        <form action="/aichat-home" method="get" class="">
+            <button type="submit" class="index-btn ">ChatBot</button>
+          </form>
 
         <!--Contents in the body tag-->
-        <img class="title" src="/img/FitnessLogo.png" alt="logo">
+        <div class="fitTaskImage">
+            <img class="title" src="/img/FitnessLogo.png" alt="logo">
+        </div>
         <div class="container taskCards">
             <h1>Points: <%= points %>
             </h1>
@@ -22,7 +23,7 @@
                 <span>
                     <form method="post" action="/addPointFit" style="display: inline">
                         <input type="text" name="task" value="<%= task1 %>" hidden>
-                        <button class="btn btn-secondary float-right" type="submit">Done</button>
+                        <button class="btn custom-btn float-right" type="submit">Done</button>
                     </form>
                     <form method="post" action="/rerollFit" style="display: inline">
                         <input type="text" name="number" value="1" hidden>
@@ -37,7 +38,7 @@
                 <span>
                     <form method="post" action="/addPointFit" style="display: inline">
                         <input type="text" name="task" value="<%= task2 %>" hidden>
-                        <button class="btn btn-secondary float-right" type="submit">Done</button>
+                        <button class="btn custom-btn float-right" type="submit">Done</button>
                     </form>
                     <form method="post" action="/rerollFit" style="display: inline">
                         <input type="text" name="number" value="2" hidden>
@@ -52,7 +53,7 @@
                 <span>
                     <form method="post" action="/addPointFit" style="display: inline">
                         <input type="text" name="task" value="<%= task3 %>" hidden>
-                        <button class="btn btn-secondary float-right" type="submit">Done</button>
+                        <button class="btn custom-btn float-right" type="submit">Done</button>
                     </form>
                     <form method="post" action="/rerollFit" style="display: inline">
                         <input type="text" name="number" value="3" hidden>
@@ -62,4 +63,4 @@
             </div>
 
         </div>
-        <%- include("templates/footer") %>
+        <%- include("templates/taskFooter") %>
