--- a/views/communityPost.ejs
+++ b/views/communityPost.ejs
@@ -11,7 +11,8 @@
 
     <form action="/communityPost/post" method="post" enctype="multipart/form-data">
         <textarea name="text" rows="4" cols="50" placeholder="Write something...(optional)"></textarea><br>
-        <input type="file" name="images" id="imageInput" multiple accept="image/*">
+        <input type="file" name="images" id="imageInput" multiple accept="image/*"><br>
+        <div class="preview" id="imagePreview"></div><br>
         <select name="tags">
             <option value="fitness">Fitness</option>
             <option value="diet">Diet</option>
@@ -25,7 +26,7 @@
         <button type="submit">Post</button>
     </form>
 
-    <div class="preview" id="imagePreview"></div>
+    
 
     <script>
         document.getElementById('imageInput').addEventListener('change', function (event) {
