added easteregg to login, signup, and main

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,5 +18,5 @@
         <a href="/reset-email">Reset password</a>
     </form>
   </div>
-<%- include("templates/end") %>
+<%- include("templates/easteregg") %>
   <%- include("templates/end") %>
