--- a/views/main.ejs
+++ b/views/main.ejs
@@ -132,7 +132,7 @@
     </script>
   </div>
 
-<%- include("templates/end") %>
+<%- include("templates/easteregg") %>
 
   <!-- Footer -->
   <%- include("templates/footer") %>
