--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -24,5 +24,5 @@
         </form>
         <br>
   </div>
-<%- include("templates/end") %>
+<%- include("templates/easteregg") %>
   <%- include("templates/end") %>
